# mlx-ui

./: .gitignore  Makefile  README.md  TESTING.md  TEST_RESULTS.md  TEST_SETUP_SUMMARY.md  app.py  example_config.yaml  pyproject.toml  pytest.ini  quick_start.py  requirements.txt  run_tests.py  test_minimal_training.py
example_dataset/: test.jsonl  train.jsonl  valid.jsonl
tests/: conftest.py  test_training.py
