[project]
name = "mlx-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Aditya Karnam",email = "akarnam37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-lm (>=0.27.0,<0.28.0)",
    "streamlit (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

[[tool.poetry.packages]]
include = "src"
